Clear the selected tile when submitting a move (especially important if the move turns out to include invalid words - because if it's a successful move, the whole game gets re-built anyway)

--- a/ScrabbleWeb/Client/Pages/GameDisplay.razor
+++ b/ScrabbleWeb/Client/Pages/GameDisplay.razor
@@ -145,6 +145,7 @@ else
 
     private async Task Play()
     {
+        gameVm.TileBeingMoved = null;
         await Submit($"/api/move/{GameId}", gameVm.Game.Move.Placements, "Move completed");
     }
 
