--- a/ScrabbleWeb/Client/wwwroot/css/app.css
+++ b/ScrabbleWeb/Client/wwwroot/css/app.css
@@ -219,7 +219,7 @@ app {
     }
 
         .tile-space .tile-container.tile-last-move {
-            background-color:darkgoldenrod;
+            background-color: darkgoldenrod;
         }
 
         .tile-space .tile-container.tile-swapping {
@@ -347,3 +347,39 @@ a.game-link:hover {
     a.game-link:hover .game-card {
         transform: scale(1.04);
     }
+
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 50;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+    .overlay .overlay-content {
+        width: 150px;
+        height: 50px;
+        background-color: white;
+        border: 4px double;
+        display: inline-flex;
+        margin: 0;
+        align-items: center;
+        justify-content: center;
+    }
+
+        .overlay .overlay-content h4 {
+            margin: 0;
+        }
+
+@media (min-width: 768px) {
+    .overlay {
+        margin-left: 125px; /* Because of side-bar */
+    }
+}
